; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_fileio.c_has_cursorhold.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_fileio.c_has_cursorhold.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@first_autopat = common dso_local global i32** null, align 8
@NORMAL_BUSY = common dso_local global i64 0, align 8
@EVENT_CURSORHOLD = common dso_local global i64 0, align 8
@EVENT_CURSORHOLDI = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @has_cursorhold() #0 {
  %1 = load i32**, i32*** @first_autopat, align 8
  %2 = call i64 (...) @get_real_state()
  %3 = load i64, i64* @NORMAL_BUSY, align 8
  %4 = icmp eq i64 %2, %3
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = load i64, i64* @EVENT_CURSORHOLD, align 8
  br label %9

7:                                                ; preds = %0
  %8 = load i64, i64* @EVENT_CURSORHOLDI, align 8
  br label %9

9:                                                ; preds = %7, %5
  %10 = phi i64 [ %6, %5 ], [ %8, %7 ]
  %11 = trunc i64 %10 to i32
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds i32*, i32** %1, i64 %12
  %14 = load i32*, i32** %13, align 8
  %15 = icmp ne i32* %14, null
  %16 = zext i1 %15 to i32
  ret i32 %16
}

declare dso_local i64 @get_real_state(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
